<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quizzer</string>

    <!-- Home / Nav Bar -->
    <string name="label_home">Home</string>
    <string name="label_sign_in">Sign in</string>
    <string name="label_sign_out">Sign out</string>
    <string name="label_play_single">New Game</string>
    <string name="label_play_single_next">Next</string>
    <string name="label_stats_score">My Score</string>
    <string name="label_game_results">Game Results</string>
    <string name="label_stats_rating">Quiz Ratings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- App Settings -->
    <string name="label_settings">Settings</string>
    <string name="label_settings_topic">Topics</string>
    <string name="label_settings_topic_java">Core Java</string>
    <string name="label_settings_topic_android">Android</string>
    <string name="label_settings_topic_javascript">Javascript</string>
    <string name="label_settings_topic_html5">CSS &amp; HTML5</string>
    <string name="label_settings_all">All</string>
    <string name="label_settings_difficulty">Difficulty</string>
    <string name="label_settings_difficulty_easy">Easy</string>
    <string name="label_settings_difficulty_medium">Medium</string>
    <string name="label_settings_difficulty_hard">Hard</string>
    <string name="action_settings">Settings</string>

    <!-- Game -->
    <string name="label_category">Quiz Category</string>
    <string name="label_round">Round</string>
    <string name="label_score">Score</string>
    <string name="label_remaining_attempts">Attempts</string>
    <string name="label_power_ups">Bonus</string>
    <string name="label_solution">Explanation</string>
    <string name="label_game_exit_header">Quit the game?</string>
    <string name="label_game_exit_save_score">Quit and save my score</string>
    <string name="label_game_exit_leave_game">Just quit</string>
    <string name="label_game_exit_reset_game">Start from scratch</string>
    <string name="label_game_exit_cancel">Return to the game</string>

    <!-- Game Menu -->
    <string name="game_menu_categories">Categories</string>
    <string name="game_menu_difficulty">Difficulty</string>
    <string name="game_menu_sound">Sound</string>


    <!-- My Score -->
    <string name="label_highest_rankings">Highest Rankings</string>
    <string name="label_best_score">Best Score</string>
    <string name="label_furthest_round">Furthest Round</string>
    <string name="label_max_bonus_points">Max Bonus Points</string>
    <string name="label_first_attempt">1st Attempt</string>
    <string name="label_second_attempt">2nd Attempt</string>
    <string name="label_third_attempt">3rd Attempt</string>

    <!-- Game Results -->
    <string name="label_success_rate">Success Rate</string>

    <!-- Misc -->
    <integer name="pair_cols">2</integer>
    <integer name="single_col">1</integer>
</resources>
