<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TableRow>
                <TextView android:padding="5dp" android:text="@string/label_round"/>
                <TextView android:padding="5dp" android:text="@string/label_score"/>
                <TextView android:padding="5dp" android:text="@string/label_remaining_attempts"/>
                <TextView android:padding="5dp" android:text="@string/label_power_ups"/>
            </TableRow>
            <TableRow>
                <TextView android:gravity="center" android:id="@+id/round"/>
                <TextView android:gravity="center" android:id="@+id/score"/>
                <TextView android:gravity="center" android:id="@+id/remaining_attempts"/>
                <TextView android:gravity="center" android:id="@+id/power_ups"/>
            </TableRow>
        </TableLayout>
        <Button
            android:id="@+id/next_quiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Next"
            android:visibility="gone"/>
    </LinearLayout>

    <ListView
        android:id="@+id/list_movies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:choiceMode="singleChoice"/>
</LinearLayout>