<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:stretchColumns="0">

    <TableRow>

        <TextView
            android:id="@+id/score_stats_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_span="@integer/pair_cols"
            android:background="@drawable/rounded_corner_top"
            android:gravity="center"
            android:minHeight="?android:attr/listPreferredItemHeight"
            android:text="Best Guess Rates"
            android:textAppearance="?android:attr/textAppearanceListItem"
            android:textColor="@color/list_item_title" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_marginRight="1dp"
            android:layout_marginTop="1dp"
            android:background="@color/list_background"
            android:gravity="center"
            android:minHeight="?android:attr/listPreferredItemHeightSmall"
            android:padding="3dp"
            android:text="@string/label_first_attempt"
            android:textAppearance="?android:attr/textAppearanceListItemSmall"
            android:textColor="@color/list_item_title" />

        <TextView
            android:id="@+id/first_attempt"
            android:layout_marginTop="1dp"
            android:background="@color/list_background"
            android:gravity="center"
            android:minHeight="?android:attr/listPreferredItemHeightSmall"
            android:padding="3dp"
            android:textAppearance="?android:attr/textAppearanceListItemSmall"
            android:textColor="@color/list_item_title" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_marginRight="1dp"
            android:layout_marginTop="1dp"
            android:background="@color/list_background"
            android:gravity="center"
            android:minHeight="?android:attr/listPreferredItemHeightSmall"
            android:padding="3dp"
            android:text="@string/label_second_attempt"
            android:textAppearance="?android:attr/textAppearanceListItemSmall"
            android:textColor="@color/list_item_title" />

        <TextView
            android:id="@+id/second_attempt"
            android:layout_marginTop="1dp"
            android:background="@color/list_background"
            android:gravity="center"
            android:minHeight="?android:attr/listPreferredItemHeightSmall"
            android:padding="3dp"
            android:textAppearance="?android:attr/textAppearanceListItemSmall"
            android:textColor="@color/list_item_title" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_marginRight="1dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/rounded_corner_bottom_left"
            android:gravity="center"
            android:minHeight="?android:attr/listPreferredItemHeightSmall"
            android:padding="3dp"
            android:text="@string/label_third_attempt"
            android:textAppearance="?android:attr/textAppearanceListItemSmall"
            android:textColor="@color/list_item_title" />

        <TextView
            android:id="@+id/third_attempt"
            android:layout_marginTop="1dp"
            android:background="@drawable/rounded_corner_bottom_right"
            android:gravity="center"
            android:minHeight="?android:attr/listPreferredItemHeightSmall"
            android:padding="3dp"
            android:textAppearance="?android:attr/textAppearanceListItemSmall"
            android:textColor="@color/list_item_title" />
    </TableRow>

</TableLayout>
