<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_corner"
    android:orientation="horizontal"
    android:paddingLeft="15dp">

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:textAppearance="?android:attr/textAppearanceListItem"
        android:textColor="@color/list_item_title"
        android:text="25" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="2dp"
        android:gravity="center_horizontal"
        android:textColor="@color/list_item_title"
        android:text="pts" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingRight="10dp"
            android:gravity="right">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="20dp"
                android:gravity="center_vertical">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="5dp"
                        android:textColor="@color/list_item_title"
                        android:text="@string/label_round" />

                    <TextView
                        android:id="@+id/round"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="10dp"
                        android:gravity="center_vertical"
                        android:textColor="@color/list_item_title"
                        android:text="5"/>

                    <TextView
                        android:id="@+id/created_at"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:textAppearance="?android:attr/textAppearanceListItemSmall"
                        android:textColor="@color/list_item_title"
                        android:text="2014-12-20 20:05"/>

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="5dp"
                        android:textColor="@color/list_item_title"
                        android:text="@string/label_power_ups" />

                    <TextView
                        android:id="@+id/power_ups"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="10dp"
                        android:textColor="@color/list_item_title"
                        android:text="2"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="5dp"
                        android:textColor="@color/list_item_title"
                        android:text="@string/label_success_rate" />

                    <TextView
                        android:id="@+id/guess_ratio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:textColor="@color/list_item_title"
                        android:text="10-0-90"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

</LinearLayout>
